--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "manager",
     "3"
   ],
-  "repository": "hhttps://github.com/aliparisp/ezbw",
+  "repository": "hhttps://github.com/ez69bw/ezbw",
   "env": {
     "ENV": {
       "description": "Ketik 'ANYTHING' untuk mengaktifkan variabel env.",
